test/scc/decl/semantic-errors/002.a
002.t:2:1: error: conflicting types for 'foo'